--- a/kafka-producer/pom.xml
+++ b/kafka-producer/pom.xml
@@ -3,13 +3,58 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.mephi</groupId>
-    <artifactId>bd-hw1</artifactId>
+    <artifactId>kafka-producer</artifactId>
     <version>1.0</version>
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>kafka-producer</module>
-    </modules>
+    <parent>
+        <groupId>ru.mephi</groupId>
+        <artifactId>bd-hw1</artifactId>
+        <version>1.0</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>2.3.0.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.2.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.11.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
+
+    </dependencies>
 
     <build>
         <plugins>
@@ -47,7 +92,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>libs/</classpathPrefix>
-                            <mainClass>ru.mephi.chenko.HadoopApplication</mainClass>
+                            <mainClass>ru.mephi.chenko.KafkaProducerApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
